# badbot-telegram-logger

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  railway.json
database/: cleanup.sql  migrate_to_bigint.sql  schema.sql
src/badbot_telegram_logger/: __init__.py  bot.py  config.py  database.py  main.py  models.py
tests/: test_config.py
